--- a/css/style.css
+++ b/css/style.css
@@ -47,5 +47,6 @@
         background-size: cover;
         background-position: center;
         align-items: end;
+        text-align: center;
     }
 }
